--- a/index.html
+++ b/index.html
@@ -1,33 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Middle Of Nowhere</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/css/bootstrap.min.css" integrity="sha384-MIwDKRSSImVFAZCVLtU0LMDdON6KVCrZHyVQQj6e8wIEJkW4tvwqXrbMIya1vriY" crossorigin="anonymous">
-    <link rel="stylesheet" href="/build/css/loading.css">
-    <link rel="stylesheet" href="/build/css/main.css">
-  </head>
-  <body>
-    <root>
-      <div class="sk-circle">
-        <div class="sk-circle1 sk-child"></div>
-        <div class="sk-circle2 sk-child"></div>
-        <div class="sk-circle3 sk-child"></div>
-        <div class="sk-circle4 sk-child"></div>
-        <div class="sk-circle5 sk-child"></div>
-        <div class="sk-circle6 sk-child"></div>
-        <div class="sk-circle7 sk-child"></div>
-        <div class="sk-circle8 sk-child"></div>
-        <div class="sk-circle9 sk-child"></div>
-        <div class="sk-circle10 sk-child"></div>
-        <div class="sk-circle11 sk-child"></div>
-        <div class="sk-circle12 sk-child"></div>
-      </div>
-    </root>
-    <script src="/build/bundle/vendor.js"></script>
-    <script inline src="systemjs.config.js"></script>
-    <script>System.import('app');</script>
-  </body>
-</html>
+<!DOCTYPE html><html><head><title>Middle Of Nowhere</title><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><meta http-equiv="x-ua-compatible" content="ie=edge"><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous"><link rel="stylesheet" href="/build/css/bundle.min.css"></head><body><root><div class="sk-circle"><div class="sk-circle1 sk-child"></div><div class="sk-circle2 sk-child"></div><div class="sk-circle3 sk-child"></div><div class="sk-circle4 sk-child"></div><div class="sk-circle5 sk-child"></div><div class="sk-circle6 sk-child"></div><div class="sk-circle7 sk-child"></div><div class="sk-circle8 sk-child"></div><div class="sk-circle9 sk-child"></div><div class="sk-circle10 sk-child"></div><div class="sk-circle11 sk-child"></div><div class="sk-circle12 sk-child"></div></div></root><script src="/build/bundle/vendor.js"></script><script src="/build/bundle/app.min.js"></script><script>!function(a){var e={app:"build/app/app","@angular":"build/vendor/@angular",rxjs:"build/vendor/rxjs"},r={app:{main:"main.js",defaultExtension:"js"},rxjs:{defaultExtension:"js"}},n=["common","compiler","core","forms","http","platform-browser","platform-browser-dynamic","router","router-deprecated","upgrade"];n.forEach(function(a){r["@angular/"+a]={main:System.packageWithIndex?"index.js":"bundles/"+a+".umd.js",defaultExtension:"js"}}),System.config({map:e,packages:r})}(this);</script><script>System.import('app');</script></body></html>
